--- a/chat-client/public/index.html
+++ b/chat-client/public/index.html
@@ -11,6 +11,7 @@
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Cliente de chat do case da OutSmart Digital</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
